template for future

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<input type="text" name="" value="" [(ngModel)]="name">
-<p>{{ name }}</p>
+<!-- <input type="text" name="" value="" [(ngModel)]="name">
+<p>{{ name }}</p> -->
 
 <!-- <input type="text" [(ngModel)]="name">
 <p>{{ name }}</p> -->
